# databricks-great-expectations-extended

./: README.md  pyproject.toml
databricks_great_expectations/: extended_dataset.py
examples/: example_data_validation.py  example_query_results.py
